--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,29 @@
               </defs>
             </svg>
           </a>
+          <div class="burger">
+            <svg
+              viewBox="0 0 24 24"
+              fill="#fff"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
+              <g id="SVGRepo_iconCarrier">
+                <path
+                  d="M4 17H20M4 12H20M4 7H20"
+                  stroke="#fff"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                ></path>
+              </g>
+            </svg>
+          </div>
         </div>
 
         <div class="banner">
@@ -99,6 +122,7 @@
             </div>
           </div>
         </div>
+        <img class="banner__img" src="images/banner-img.png" alt="banner-img" />
       </div>
     </header>
     <main class="main">
@@ -113,7 +137,7 @@
               горения потрясающей красоты
             </p>
             <img
-              class="advatages__img"
+              class="advantages__img"
               src="images/advantages-img.png"
               alt="fire"
             />
@@ -208,33 +232,66 @@
               обьема среди всех производителей.
             </p>
             <p class="refill__text">
-              В наши топливные блоки встроен
-              мощный насос.
+              В наши топливные блоки встроен мощный насос.
             </p>
             <div class="refill__footer">
               <div class="refill__manual">
-                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M19.4139 -0.000488281H14.4139C14.0904 -0.000488281 13.828 0.261853 13.828 0.585445V2.92918C13.828 3.25277 14.0904 3.51511 14.4139 3.51511H15.1561V5.27291C15.1561 5.27369 15.1562 5.27439 15.1562 5.27517V11.3666C15.1562 12.4903 14.7794 13.5959 14.0932 14.4857C13.4181 15.3612 12.4629 16.0075 11.3965 16.3012C10.191 16.6332 8.85864 16.5195 7.73361 15.9734C6.7478 15.4948 5.92796 14.698 5.42097 13.7266C5.04187 13.0002 4.84359 12.1858 4.84359 11.3666V5.27517C4.84359 5.27439 4.84371 5.27369 4.84371 5.27291V3.51511H5.58589C5.90949 3.51511 6.17183 3.25277 6.17183 2.92918V0.585445C6.17183 0.261853 5.90949 -0.000488281 5.58589 -0.000488281H0.585933C0.262342 -0.000488281 0 0.261853 0 0.585445V2.92918C0 3.25277 0.262342 3.51511 0.585933 3.51511H1.32811C1.32811 3.51511 1.32811 5.27228 1.32808 5.27303V11.3666C1.32808 13.6041 2.21811 15.7841 3.77892 17.3865C5.34355 18.9929 7.50725 19.9428 9.74992 19.9969C12.0048 20.0513 14.2075 19.2539 15.873 17.7244C17.5181 16.2136 18.5325 14.0878 18.658 11.8565C18.6672 11.6934 18.6718 11.53 18.6718 11.3666C18.6718 11.3666 18.6718 5.27299 18.6717 5.27224V3.51511H19.4139C19.7375 3.51511 19.9998 3.25277 19.9998 2.92918V0.585445C19.9998 0.261853 19.7375 -0.000488281 19.4139 -0.000488281V-0.000488281ZM1.17187 1.17138H4.99996V2.34324H1.17187V1.17138ZM3.67185 3.51511V4.68698H2.49998V3.51511H3.67185ZM17.5075 11.367C17.464 12.1273 17.358 12.8779 17.1333 13.6111C16.6869 15.0674 15.7733 16.3758 14.5629 17.3005C12.5165 18.8639 9.67442 19.2561 7.27619 18.3281C5.2168 17.5312 3.57735 15.8138 2.87967 13.7184C2.6276 12.9613 2.49998 12.1644 2.49998 11.3666V5.85896H3.67177V11.3666C3.67177 13.6044 4.90332 15.7157 6.84385 16.8276C8.952 18.0356 11.7146 17.9161 13.691 16.4902C14.7581 15.7203 15.5677 14.6026 15.9777 13.3522C16.7601 10.9661 16.0822 8.35851 16.3492 5.86165C16.7383 5.8613 17.1274 5.86095 17.5166 5.8606C17.3594 7.68363 17.6113 9.55311 17.5075 11.367V11.367ZM17.4999 4.68698H16.328V3.51511H17.4999V4.68698ZM18.828 2.34324H14.9999V1.17138H18.828V2.34324Z" fill="#FFCF7A"/>
-                  </svg>
-                  
-                  <div class="refill__manual-line"></div>
-                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g clip-path="url(#clip0_71_295)">
-                    <path d="M8.88892 -0.000488281H11.1111V11.1106H8.88892V-0.000488281Z" fill="#FFCF7A"/>
-                    <path d="M15.0009 1.33813L13.888 3.26175C16.2873 4.64948 17.7778 7.23136 17.7778 9.99959C17.7778 14.2884 14.2888 17.7774 10 17.7774C5.71123 17.7774 2.22222 14.2884 2.22222 9.99959C2.22222 7.23136 3.71267 4.64948 6.11198 3.26175L4.99913 1.33813C1.91551 3.12199 0 6.44086 0 9.99959C0 15.5135 4.48611 19.9996 10 19.9996C15.5139 19.9996 20 15.5135 20 9.99959C20 6.44086 18.0845 3.12199 15.0009 1.33813Z" fill="#FFCF7A"/>
-                    </g>
-                    <defs>
+                <svg
+                  width="20"
+                  height="20"
+                  viewBox="0 0 20 20"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M19.4139 -0.000488281H14.4139C14.0904 -0.000488281 13.828 0.261853 13.828 0.585445V2.92918C13.828 3.25277 14.0904 3.51511 14.4139 3.51511H15.1561V5.27291C15.1561 5.27369 15.1562 5.27439 15.1562 5.27517V11.3666C15.1562 12.4903 14.7794 13.5959 14.0932 14.4857C13.4181 15.3612 12.4629 16.0075 11.3965 16.3012C10.191 16.6332 8.85864 16.5195 7.73361 15.9734C6.7478 15.4948 5.92796 14.698 5.42097 13.7266C5.04187 13.0002 4.84359 12.1858 4.84359 11.3666V5.27517C4.84359 5.27439 4.84371 5.27369 4.84371 5.27291V3.51511H5.58589C5.90949 3.51511 6.17183 3.25277 6.17183 2.92918V0.585445C6.17183 0.261853 5.90949 -0.000488281 5.58589 -0.000488281H0.585933C0.262342 -0.000488281 0 0.261853 0 0.585445V2.92918C0 3.25277 0.262342 3.51511 0.585933 3.51511H1.32811C1.32811 3.51511 1.32811 5.27228 1.32808 5.27303V11.3666C1.32808 13.6041 2.21811 15.7841 3.77892 17.3865C5.34355 18.9929 7.50725 19.9428 9.74992 19.9969C12.0048 20.0513 14.2075 19.2539 15.873 17.7244C17.5181 16.2136 18.5325 14.0878 18.658 11.8565C18.6672 11.6934 18.6718 11.53 18.6718 11.3666C18.6718 11.3666 18.6718 5.27299 18.6717 5.27224V3.51511H19.4139C19.7375 3.51511 19.9998 3.25277 19.9998 2.92918V0.585445C19.9998 0.261853 19.7375 -0.000488281 19.4139 -0.000488281V-0.000488281ZM1.17187 1.17138H4.99996V2.34324H1.17187V1.17138ZM3.67185 3.51511V4.68698H2.49998V3.51511H3.67185ZM17.5075 11.367C17.464 12.1273 17.358 12.8779 17.1333 13.6111C16.6869 15.0674 15.7733 16.3758 14.5629 17.3005C12.5165 18.8639 9.67442 19.2561 7.27619 18.3281C5.2168 17.5312 3.57735 15.8138 2.87967 13.7184C2.6276 12.9613 2.49998 12.1644 2.49998 11.3666V5.85896H3.67177V11.3666C3.67177 13.6044 4.90332 15.7157 6.84385 16.8276C8.952 18.0356 11.7146 17.9161 13.691 16.4902C14.7581 15.7203 15.5677 14.6026 15.9777 13.3522C16.7601 10.9661 16.0822 8.35851 16.3492 5.86165C16.7383 5.8613 17.1274 5.86095 17.5166 5.8606C17.3594 7.68363 17.6113 9.55311 17.5075 11.367V11.367ZM17.4999 4.68698H16.328V3.51511H17.4999V4.68698ZM18.828 2.34324H14.9999V1.17138H18.828V2.34324Z"
+                    fill="#FFCF7A"
+                  />
+                </svg>
+
+                <div class="refill__manual-line"></div>
+                <svg
+                  width="20"
+                  height="20"
+                  viewBox="0 0 20 20"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_71_295)">
+                    <path
+                      d="M8.88892 -0.000488281H11.1111V11.1106H8.88892V-0.000488281Z"
+                      fill="#FFCF7A"
+                    />
+                    <path
+                      d="M15.0009 1.33813L13.888 3.26175C16.2873 4.64948 17.7778 7.23136 17.7778 9.99959C17.7778 14.2884 14.2888 17.7774 10 17.7774C5.71123 17.7774 2.22222 14.2884 2.22222 9.99959C2.22222 7.23136 3.71267 4.64948 6.11198 3.26175L4.99913 1.33813C1.91551 3.12199 0 6.44086 0 9.99959C0 15.5135 4.48611 19.9996 10 19.9996C15.5139 19.9996 20 15.5135 20 9.99959C20 6.44086 18.0845 3.12199 15.0009 1.33813Z"
+                      fill="#FFCF7A"
+                    />
+                  </g>
+                  <defs>
                     <clipPath id="clip0_71_295">
-                    <rect width="20" height="20" fill="white" transform="translate(0 -0.000488281)"/>
+                      <rect
+                        width="20"
+                        height="20"
+                        fill="white"
+                        transform="translate(0 -0.000488281)"
+                      />
                     </clipPath>
-                    </defs>
-                    </svg>
-                                      
+                  </defs>
+                </svg>
               </div>
-              <p class="refill__footer-text"> 
-                Достаточно вставить шланг
-Нажать кнопку
+              <p class="refill__footer-text">
+                Достаточно вставить шланг Нажать кнопку
               </p>
+            </div>
+          </div>
+
+          <div class="refill__img-wrapper">
+            <div class="refill__img">
+              <img
+                class="refill__img-item"
+                src="images/refill-img.png"
+                alt="refill"
+              />
             </div>
           </div>
         </div>
