--- a/src/index.html
+++ b/src/index.html
@@ -132,10 +132,10 @@
             <h2 class="advantages__title title">
               Настоящий высокий огонь у вас дома
             </h2>
-            <p class="advantages__subtitle">
+            <h3 class="advantages__subtitle subtitle">
               Благодаря специальной технологии горения биоэтанола мы добились
               горения потрясающей красоты
-            </p>
+            </h3>
             <img
               class="advantages__img"
               src="images/advantages-img.png"
@@ -293,6 +293,191 @@
                 alt="refill"
               />
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="smart">
+        <div class="container">
+          <div class="smart__inner">
+            <h2 class="smart__title title">
+              Умный камин
+              <div class="refill__manual-line"></div>
+              очень умный
+            </h2>
+            <h3 class="smart__subtitle subtitle">
+              Даже если у Вас нет своего решения по умному дому. <br />
+              Мы отлично ладим с Яндекс.Алиса и Mi Home.
+            </h3>
+            <img class="smart__img" src="images/smart-bg.png" alt="smart" />
+          </div>
+        </div>
+      </section>
+      <section class="info">
+        <div class="container">
+          <div class="info__inner">
+            <div class="info__wrapper center">
+              <div class="info__item">
+                <h4 class="info__wrapper-title">Топливный блок</h4>
+                <div class="info__img-wrapper">
+                  <p class="info__img-text">
+                    Лицевая панель из жаропрочной нержавеющей стали толщиной 5
+                    мм
+                  </p>
+                  <div class="info__img-line"></div>
+                  <img
+                    class="info__img"
+                    src="images/info-img.png"
+                    alt="fireplace"
+                  />
+                </div>
+              </div>
+
+              <div class="info__item">
+                <h4 class="info__title">
+                  Очаги для встраивания в нишу по Вашим размерам
+                </h4>
+                <p class="info__text">
+                  Короб выполненый из нержавеющей стали 2 мм или холоднокатанной
+                  стали 3 мм Окрашен кремнийорганической и акриловой краской
+                  Каждый комплектуется керамическим матом Лучшая
+                  теплоизолированость из доступных Изготавливается исключительно
+                  под Ваши размеры Наши технологи спроектируют техническое
+                  задание для ниши учитывая особенности Вашего ремонта. Размер
+                  ограничен только Вашей фантазией Отделка стемалитом и цветными
+                  металлами
+                </p>
+              </div>
+            </div>
+
+            <div class="info__wrapper">
+              <div class="info__item">
+                <h5 class="info__list-title">Варианты отделки</h5>
+                <div class="info__item-lists">
+                  <ul class="info__list">
+                    <li class="info__list-item">Черный матовый</li>
+                    <li class="info__list-item">Шлифованная сталь</li>
+                  </ul>
+                  <ul class="info__list">
+                    <li class="info__list-item">Керамика</li>
+                    <li class="info__list-item">Нитрид титана</li>
+                  </ul>
+                </div>
+                <h5 class="info__list-title">Стандрартная комплектация</h5>
+                <div class="info__item-lists">
+                  <ul class="info__list">
+                    <li class="info__list-item">Lorem, ipsum.</li>
+                    <li class="info__list-item">Lorem, ipsum.</li>
+                    <li class="info__list-item">Lorem, ipsum.</li>
+                    <li class="info__list-item">Lorem, ipsum.</li>
+                    <li class="info__list-item">Lorem, ipsum.</li>
+                    <li class="info__list-item">Lorem, ipsum.</li>
+                  </ul>
+                  <ul class="info__list">
+                    <li class="info__list-item">Lorem, ipsum.</li>
+                    <li class="info__list-item">Lorem, ipsum.</li>
+                    <li class="info__list-item">Lorem, ipsum.</li>
+                    <li class="info__list-item">Lorem, ipsum.</li>
+                    <li class="info__list-item">Lorem, ipsum.</li>
+                    <li class="info__list-item">Lorem, ipsum.</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="swiper equipment-slider slider">
+                <div class="swiper-wrapper">
+                  <img
+                    class="swiper-slide"
+                    src="images/slider-img.jpg"
+                    alt="slider"
+                  />
+                  <img
+                    class="swiper-slide"
+                    src="images/slider-img.jpg"
+                    alt="slider"
+                  />
+                  <img
+                    class="swiper-slide"
+                    src="images/slider-img.jpg"
+                    alt="slider"
+                  />
+                </div>
+                <div class="swiper-buttons-wrapper">
+                  <div class="swiper-button-next"></div>
+                  <div class="swiper-button-prev"></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="info__wrapper">
+              <div class="info__item">
+                <h4 class="info__title slider-title">Готовые решения</h4>
+                <p class="info__text slider-text">
+                  Напольные отдельно стоящие камины. Настенные очаги которые
+                  вешаются как ТВ. Подвесные модели.
+                </p>
+                <div class="swiper slider">
+                  <div class="swiper-wrapper">
+                    <img
+                      class="swiper-slide"
+                      src="images/slider-img.jpg"
+                      alt="slider"
+                    />
+                    <img
+                      class="swiper-slide"
+                      src="images/slider-img.jpg"
+                      alt="slider"
+                    />
+                    <img
+                      class="swiper-slide"
+                      src="images/slider-img.jpg"
+                      alt="slider"
+                    />
+                  </div>
+                  <div class="swiper-buttons-wrapper">
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="info__item">
+                <h4 class="info__title slider-title">Аксессуары</h4>
+                <p class="info__text slider-text">
+                  Защитные экраны, Дверцы, Стемалит, Дрова, Камни, Кастомные
+                  пульты.
+                </p>
+                <div class="swiper slider">
+                  <div class="swiper-wrapper">
+                    <img
+                      class="swiper-slide"
+                      src="images/slider-img.jpg"
+                      alt="slider"
+                    />
+                    <img
+                      class="swiper-slide"
+                      src="images/slider-img.jpg"
+                      alt="slider"
+                    />
+                    <img
+                      class="swiper-slide"
+                      src="images/slider-img.jpg"
+                      alt="slider"
+                    />
+                  </div>
+                  <div class="swiper-buttons-wrapper">
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="info__catalog">
+            <p class="info__catalog-text">
+              Получите каталог с моделями и ценами на всю нашу продукцию
+            </p>
+            <button class="info__catalog-btn">
+              Получить каталог!
+            </button>
           </div>
         </div>
       </section>
