add-task-and-about-sections

--- a/src/index.html
+++ b/src/index.html
@@ -481,6 +481,35 @@
           </div>
         </div>
       </section>
+      <section class="task">
+        <div class="container">
+          <div class="task__inner">
+            <h2 class="task__title title">
+              Есть задача? Есть решение!
+            </h2>
+            <div class="task__list"> 
+              <img class="task__item" src="images/slider-img.jpg" alt="img">
+              <img class="task__item" src="images/slider-img.jpg" alt="img">
+              <img class="task__item" src="images/slider-img.jpg" alt="img">
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="about">
+        <div class="container">
+          <div class="about__inner">
+            <h2 class="about__title title">
+              Есть задача? Есть решение!
+            </h2>
+            <div class="about__list"> 
+              <img class="about__item" src="images/slider-img.jpg" alt="img">
+              <img class="about__item" src="images/slider-img.jpg" alt="img">
+              <img class="about__item" src="images/slider-img.jpg" alt="img">
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
