start-section-author

--- a/src/index.html
+++ b/src/index.html
@@ -510,6 +510,74 @@
           </div>
         </div>
       </section>
+      <section class="author">
+        <div class="container">
+          <div class="author__inner">
+            <h2 class="author__title title">
+              вы автор вашего камина
+            </h2>
+            <div class="author__content">
+              <div class="author__block">
+                <img class="author__block-img" src="images/author-img.png" alt="fireplace">
+                <div class="author__list">
+                  <div class="author__item">
+                    <h6 class="author__item-title">
+                      длина
+                    </h6>
+                      <p class="author__item-text">
+                        6.5 м
+                      </p>
+                  </div>
+                  <div class="author__item">
+                    <h6 class="author__item-title">
+                      лицевая панель
+                    </h6>
+                      <div class="author__item-color">
+                       
+                      </div>
+                  </div>
+                </div>
+              </div>
+
+              <form class="author__block" action="">
+                <div class="author__length">
+                  <h5 class="author__item-title">
+                    Выберите длину
+                  </h5>
+                  <div class="range__wrapper">
+                    <p class="author__length-text start">
+                      0.5 м
+                    </p>
+                    <input class="author__length-range" type="range">
+                    <p class="author__length-text result">
+                      10 м
+                    </p>
+                  </div>
+                </div>
+
+                <div class="facial__panel">
+                  <h5 class="author__item-title">
+                    Лицевая панель
+                  </h5>
+
+                  <div class="facial__slider-wrapper">
+                    <div class="facial__panel-slider swiper">
+                      <div class="swiper-wrapper">
+                        <img class="swiper-slide" src="images/panel.png" alt="panel">
+                        <img class="swiper-slide" src="images/panel.png" alt="panel">
+                        <img class="swiper-slide" src="images/panel.png" alt="panel">
+                      </div>
+                    
+                    </div>
+                    <div class="swiper-button-next"></div>
+                      <div class="swiper-button-prev"></div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
