--- a/src/index.html
+++ b/src/index.html
@@ -677,36 +677,40 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer__top">
           <h2 class="footer__title title">связаться с нами</h2>
           <div class="footer__list">
-            <div class="footer__item">
-              <p class="footer__item-title">WhatsApp</p>
-              <p class="footer__item-value">+7911 306 4144</p>
+            <div class="footer__col">
+              <div class="footer__item">
+                <p class="footer__item-title">WhatsApp</p>
+                <p class="footer__item-value">+7911 306 4144</p>
+              </div>
+              <div class="footer__item">
+                <p class="footer__item-title">Телеграм</p>
+                <p class="footer__item-value">@elite_fire</p>
+              </div>
             </div>
-            <div class="footer__item">
-              <p class="footer__item-title">Почта</p>
-              <p class="footer__item-value">info@elite-fire.ru</p>
-            </div>
+            <div class="footer__col">
+              <div class="footer__item">
+                <p class="footer__item-title">Почта</p>
+                <p class="footer__item-value">info@elite-fire.ru</p>
+              </div>
+              <div class="footer__item">
+                <p class="footer__item-title">Наш адрес</p>
+                <p class="footer__item-value">
+                  Россия, г. Москва, Варшавское шоссе, 170 г
+                </p>
+              </div>
+          </div>
+          <div class="footer__col">
             <div class="footer__item">
               <p class="footer__item-title">Телефон</p>
               <p class="footer__item-value">8 911 306 4144</p>
             </div>
-          </div>
-          <div class="footer__list">
-            <div class="footer__item">
-              <p class="footer__item-title">Телеграм</p>
-              <p class="footer__item-value">@elite_fire</p>
-            </div>
-            <div class="footer__item">
-              <p class="footer__item-title">Наш адрес</p>
-              <p class="footer__item-value">
-                Россия, г. Москва, Варшавское шоссе, 170 г
-              </p>
-            </div>
             <button class="footer__btn">Связаться с менеджером</button>
+          </div>
           </div>
         </div>
 
@@ -714,10 +718,10 @@
           <a class="logo" href="#"> Elite Fire </a>
           <p class="footer__bottom-text">2020-2021</p>
           <p class="footer__bottom-text">ООО “МЕТАЛЛЭЛЕКТРОИНВЕСТ”</p>
-          <p class="footer__bottom-text">Пользовательское соглашение</p>
+          <a class="footer__bottom-link footer__bottom-text" href="#">Пользовательское соглашение</a>
         </div>
         
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
