finish-and-add-dist

--- a/src/index.html
+++ b/src/index.html
@@ -677,7 +677,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="footer__top">
           <h2 class="footer__title title">связаться с нами</h2>
@@ -703,14 +703,14 @@
                   Россия, г. Москва, Варшавское шоссе, 170 г
                 </p>
               </div>
-          </div>
-          <div class="footer__col">
-            <div class="footer__item">
-              <p class="footer__item-title">Телефон</p>
-              <p class="footer__item-value">8 911 306 4144</p>
             </div>
-            <button class="footer__btn">Связаться с менеджером</button>
-          </div>
+            <div class="footer__col">
+              <div class="footer__item">
+                <p class="footer__item-title">Телефон</p>
+                <p class="footer__item-value">8 911 306 4144</p>
+              </div>
+              <button class="footer__btn">Связаться с менеджером</button>
+            </div>
           </div>
         </div>
 
@@ -718,10 +718,11 @@
           <a class="logo" href="#"> Elite Fire </a>
           <p class="footer__bottom-text">2020-2021</p>
           <p class="footer__bottom-text">ООО “МЕТАЛЛЭЛЕКТРОИНВЕСТ”</p>
-          <a class="footer__bottom-link footer__bottom-text" href="#">Пользовательское соглашение</a>
+          <a class="footer__bottom-link footer__bottom-text" href="#"
+            >Пользовательское соглашение</a
+          >
         </div>
-        
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
