fix-config-and-footer-links

--- a/src/index.html
+++ b/src/index.html
@@ -685,17 +685,17 @@
             <div class="footer__col">
               <div class="footer__item">
                 <p class="footer__item-title">WhatsApp</p>
-                <p class="footer__item-value">+7911 306 4144</p>
+                <a class="footer__item-value" href="#">+7911 306 4144</a>
               </div>
               <div class="footer__item">
                 <p class="footer__item-title">Телеграм</p>
-                <p class="footer__item-value">@elite_fire</p>
+                <a class="footer__item-value" href="#">@elite_fire</a>
               </div>
             </div>
             <div class="footer__col">
               <div class="footer__item">
                 <p class="footer__item-title">Почта</p>
-                <p class="footer__item-value">info@elite-fire.ru</p>
+                <a class="footer__item-value" href="#">info@elite-fire.ru</a>
               </div>
               <div class="footer__item">
                 <p class="footer__item-title">Наш адрес</p>
@@ -707,7 +707,7 @@
             <div class="footer__col">
               <div class="footer__item">
                 <p class="footer__item-title">Телефон</p>
-                <p class="footer__item-value">8 911 306 4144</p>
+                <a class="footer__item-value" href="tel:+79113064144">8 911 306 4144</a>
               </div>
               <button class="footer__btn">Связаться с менеджером</button>
             </div>
